<resources>
    <string name="app_name">Webscraping</string>
    <string name="web_scraping">Web Scraping</string>
    <string name="url">Ingresa la URL</string>
    <string name="palabra">Ingresa la palabra</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="frecuencia">Frecuencia:</string>
    <string-array name="opciones_frecuencia">
        <item>10 minutos</item>
        <item>30 minutos</item>
        <item>1 hora</item>
    </string-array>
</resources>