<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/web_scraping"
                android:id="@+id/scrapingText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/urlText"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:inputType="textUri"
                android:padding="8dp"
                android:hint="@string/url"
                android:drawableStart="@drawable/url"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/palabraText"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:padding="8dp"
                android:hint="@string/palabra"
                android:drawableStart="@drawable/palabra"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center|center_horizontal"
                android:layout_marginTop="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frecuencia"
                    android:textSize="18sp"
                    android:textColor="@color/purple"
                    android:textAlignment="center"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/frecuenciaSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:entries="@array/opciones_frecuencia" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/on"
                android:id="@+id/btnOn"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/off"
                android:id="@+id/btnOff"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>